Fixed some spacing issues

--- a/style.css
+++ b/style.css
@@ -237,7 +237,8 @@ header nav a.active {
 }
  #daysInAWeek section div b:first-child {
      color: var(--blue);
-     font-weight: 400;
+     font-size: 1.6rem;
+     font-weight: 500;
 }
  #daysInAWeek section div span{
      color: var(--pink) !important;
@@ -245,9 +246,7 @@ header nav a.active {
      font-style: normal;
 }
  .contactButtons {
-     margin-top: 2vh;
-     width: 80%;
-     margin: .3em 10%;
+     margin: 1.2rem 2.4rem 0 2.4rem;
      display: grid;
      grid-template-columns: repeat(2, 1fr);
      grid-column-gap: 1vh;
@@ -258,7 +257,7 @@ header nav a.active {
      transition: .3s all ease-in-out;
 }
  .contactButtons a svg{
-     height: 3vh;
+     height: 2.4rem;
      width: auto;
 }
  .contactButtons a:hover svg path {
@@ -271,11 +270,14 @@ header nav a.active {
  footer {
      bottom: 0;
      width: 100%;
-     background: rgba(250,250,250,1);
+     background: rgba(250,250,250,0.5);
      color: var(--grey);
      padding: 3rem;
      font-size: 1.2rem;
      font-weight: 300;
+}
+footer a {
+    color: var(--grey);
 }
  .post-wrapper, .last-posts {
      text-align: center;
@@ -853,7 +855,7 @@ header nav a.active {
      }
      .landing {
          background-position: center bottom;
-         background-size: 70%;
+         background-size: 100%;
          height: 36rem;
          text-align: center;
     }
@@ -880,6 +882,9 @@ header nav a.active {
     }
      .share {
          font-size: 0.8em;
+    }
+    footer {
+        padding: 1rem;
     }
 }
  
